# physicsSimulation

./: .gitignore  CMakeLists.txt  Notebook.ipynb  README.md  atom.h  borders.h  engine.h  graphics.h  main.cpp  render.py  report.tex  Расчеты.xlsx
exp_res/: p_dist.csv  t_dist.csv  v_dist.csv  x_dist.csv  y_dist.csv  z_dist.csv
physics/: atom.h  borders.h  engine.h  graphics.h  main.cpp
physics.xcodeproj/: project.pbxproj
physics.xcodeproj/project.xcworkspace/xcuserdata/nikita.xcuserdatad/: UserInterfaceState.xcuserstate
physics.xcodeproj/xcuserdata/nikita.xcuserdatad/xcschemes/: xcschememanagement.plist
report/: report.tex
report/MagazineReport/: authors.tex  links.tex  main.tex  mycommon.sty  style.sty
report/MagazineReport/familia/: familia.tex
